--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
     </div>
     <div class="lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2">
       <img class="h-66 w-full object-cover sm:h-72 md:h-96 lg:w-full lg:h-full"
-        src="/image.webp" alt="">
+        src="image.webp" alt="">
     </div>
   </div>
   <div class="bg-white">
